# go-webserver/docs/swagger.json
@@ -24,7 +24,7 @@
                 "summary": "Show the dashboard"
             }
         },
-        "/data/csv": {
+        "/data": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -50,7 +50,7 @@
                 "summary": "Upload csv data"
             }
         },
-        "/data/csv/{id}": {
+        "/data/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
